@startuml Event Implementation Hierarchy

interface Event {
  +Integer eventSequence()
}

interface CustomerEvent {
  +CustomerId customerId()
}

interface ConcertEvent {
  +ConcertId concertId()
}

class CustomerRegistered {
  -CustomerId customerId
  -Integer eventSequence
  -String customerName
  -String email
}

class TicketsPurchased {
  -CustomerId customerId
  -Integer eventSequence
  -TicketOrderId ticketOrderId
  -ConcertId concertId
  -int quantity
  -int paidAmount
}

class ConcertScheduled {
  -ConcertId concertId
  -Integer eventSequence
  -String artist
  -int ticketPrice
  -LocalDateTime showDateTime
  -LocalTime doorsTime
  -int capacity
  -int maxTicketsPerPurchase
}

class ConcertRescheduled {
  -ConcertId concertId
  -Integer eventSequence
  -LocalDateTime newShowDateTime
  -LocalTime newDoorsTime
}

class TicketsSold {
  -ConcertId concertId
  -Integer eventSequence
  -int quantity
  -int paidAmount
}

Event <|-- CustomerEvent
Event <|-- ConcertEvent

CustomerEvent <|.. CustomerRegistered
CustomerEvent <|.. TicketsPurchased

ConcertEvent <|.. ConcertScheduled
ConcertEvent <|.. ConcertRescheduled
ConcertEvent <|.. TicketsSold

@enduml